Revised HistoryDetail UI, added link to firebase.

--- a/app/src/main/res/layout/activity_payment_detail.xml
+++ b/app/src/main/res/layout/activity_payment_detail.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/paymentmethoddetail"
+            android:id="@+id/lbl_payment"
             android:text="Payment Method"
             android:layout_below="@+id/status"
             android:layout_marginTop="40dp"
@@ -70,7 +70,7 @@
         <TextView
             android:id="@+id/payment_method"
             android:text="Transfer Bank : 1753900759001"
-            android:layout_below="@+id/paymentmethoddetail"
+            android:layout_below="@+id/lbl_payment"
             android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif-medium"
