--- a/app/src/main/res/layout/history_detail.xml
+++ b/app/src/main/res/layout/history_detail.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="17dp"
         android:layout_marginLeft="35dp"
         android:layout_toRightOf="@+id/bookingnumber"
-        android:id="@+id/bookingnumbervalue"
+        android:id="@+id/lbl_bookingnumber"
         android:textStyle="bold"
         android:fontFamily="sans-serif-medium"
         android:text="299-800-100-03"
@@ -44,7 +44,7 @@
         android:layout_width="90dp"
         android:layout_height="90dp" />
     <TextView
-        android:id="@+id/restaurant_name"
+        android:id="@+id/lbl_restaurant_name"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:text="Kintan Buffet [Central Park]"
@@ -57,25 +57,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/dateorder_booking"
+        android:id="@+id/lbl_dateorder_booking"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="7dp"
         android:text="29 - May - 2019"
         android:textColor="#000"
         android:fontFamily="sans-serif-medium"
         android:textSize="19dip"
-        android:layout_below="@+id/restaurant_name"
+        android:layout_below="@+id/lbl_restaurant_name"
         android:layout_toRightOf="@id/restaurant_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
+        android:id="@+id/lbl_timeorder_booking"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
         android:text="17.40 WIB"
         android:textColor="#000"
         android:fontFamily="sans-serif-medium"
         android:textSize="19dip"
-        android:layout_below="@+id/dateorder_booking"
+        android:layout_below="@+id/lbl_dateorder_booking"
         android:layout_toRightOf="@id/restaurant_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -99,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/jumlahorangvalue"
+        android:id="@+id/lbl_amount"
         android:layout_below="@id/bar2"
         android:layout_toRightOf="@id/jumlahorang"
         android:fontFamily="sans-serif-medium"
@@ -123,8 +124,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/paymentmethoddetail"
-        android:layout_below="@id/jumlahorangvalue"
+        android:id="@+id/lbl_payment"
+        android:layout_below="@id/lbl_amount"
         android:layout_toRightOf="@id/jumlahorang"
         android:fontFamily="sans-serif-medium"
         android:layout_marginLeft="45dp"
@@ -156,6 +157,7 @@
         android:layout_width="330dp"
         android:layout_height="60dp" />
     <TextView
+        android:id="@+id/lbl_total"
         android:layout_below="@id/total"
         android:fontFamily="sans-serif-medium"
         android:textStyle="bold"
@@ -187,6 +189,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <RatingBar
+        android:id="@+id/rating_bar"
         android:layout_below="@+id/ratingdetail"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
